@@ -1,6 +1,9 @@
 5.4.0 2021xxxx
   BF: HTTP(S) Server Status: Update of class 4xx
-  BF: HTTP(S) CGI: REQUEST_URI without normalization/decoding (unchanged as received from the client)
+  BF: HTTP(S) CGI: Correction of REQUEST_URI
+      Without normalization/decoding (unchanged as received from the client)
+  BF: HTTP(S) CGI: Correction of SCRIPT_URI / SCRIPT_URL
+      Without normalization/decoding (unchanged as received from the client)
   CR: HTTP(S) CGI: Output of the error pipe of the CGI process
   CR: HTTP(S) CGI: PATH_CONTEXT replaces PATH_ABSOLUTE (omitted)
   CR: Build: Target release replaced archive (omitted)
